# RP2040_Effects_Switcher

./: CMakeLists.txt  main.cpp
core_0/: core_0.cpp  core_0.h
core_1/: core_1.cpp  core_1.h  core_1_entry.cpp  core_1_entry.h
data_containers/MIDI/: midi_commands.cpp  midi_commands.h
data_containers/patch_data/: patch_data.cpp  patch_data.h
data_containers/system_data/: system_data.cpp  system_data.h
debug/: debug.cpp  debug.h
display_manager/: display_manager.cpp  display_manager.h
global/: gpio_defs.h
input_manager/: input_manager.cpp  input_manager.h
output_manager/: output_manager.cpp  output_manager.h
state_manager/: state_manager.cpp  state_manager.h
storage_manager/: storage_defintions.h  storage_manager.cpp  storage_manager.h
